syntax = "proto2";

package common;

option java_package = "com.digitald4.common.proto";
option java_outer_classname = "DD4Protos";

message GeneralData {
	optional int32 id = 1;
	optional int32 group_id = 2;
	optional int32 in_group_id = 3;
	optional string name = 4;
	optional double rank = 5;
	optional bool active = 6;
	optional string description = 7;
	optional string data = 8;
}

message DataFile {
	optional int32 id = 1;
  optional string name = 2;
	optional string type = 3;
	optional int32 size = 4;
	optional bytes data = 5;
}

message User {
	optional int32 id = 1;

	enum UserType {
		UNSPECIFIED = 0;
		ADMIN = 1;
		STANDARD = 2;
	}
	optional UserType type = 2;
	optional string user_name = 3;
	optional string email = 4;
	optional string first_name = 5;
	optional string last_name = 6;
  optional string full_name = 7;
	optional bool disabled = 8;
	optional bool read_only = 9;
	optional string notes = 10;
	optional int64 last_login = 11;

  // This should not be put into the UI model.
  optional string password = 12;
}